// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelComponent should create with label First name 1`] = `
<rc-label>
  First name
</rc-label>
`;

exports[`LabelComponent should create with label Name 1`] = `
<rc-label>
  Name
</rc-label>
`;
